# mofa-skills

./: .gitignore  README.md  registry-meta.json
.github/workflows/: ci.yml
deep-research/: .cursorrules  .env  SKILL.md  config.toml
deep-research/examples/: market-research.md
deep-research/templates/: entry-prompt.md  explorer-prompt.md  synthesis-prompt.md
mofa/: animate-card.js  config.json
mofa-agent-memory-deck/: SKILL.md  manifest.json
mofa-agent-swarm/: Cargo.toml  SKILL.md  manifest.json
mofa-agent-swarm/src/: db.rs  main.rs
mofa-agent-topology/: SKILL.md  manifest.json
mofa-amazon-mcp/: .cursorrules  SKILL.md  architecture.dot  config.toml
mofa-cards/: SKILL.md  architecture.dot  manifest.json
mofa-cli/: Cargo.toml  README.md
mofa-cli/examples/: test_ocr_layout.rs
mofa-cli/src/: config.rs  dashscope.rs  deepseek_ocr.rs  gemini.rs  image_util.rs  layout.rs  lib.rs  main.rs  pptx.rs  style.rs  veo.rs
mofa-cli/src/pipeline/: cards.rs  comic.rs  infographic.rs  mod.rs  slides.rs  video.rs
mofa-comic/: SKILL.md  architecture.dot  manifest.json
mofa-crawlee-python/: SKILL.md  architecture.dot  config.toml
mofa-crawler/: .env.example  SKILL.md  architecture.dot  config.toml  manifest.json
mofa-defuddle/: SKILL.md  architecture.dot
mofa-eastmoney/: SKILL.md  architecture.dot
mofa-eval/: Cargo.toml  SKILL.md  manifest.json
mofa-eval/src/: db.rs  evaluate.rs  main.rs
mofa-eval/styles/: default.toml
mofa-firecrawl/: SKILL.md  architecture.dot  config.toml  test-skill.sh
mofa-fm/: Cargo.toml  SKILL.md  architecture.dot  manifest.json
mofa-fm-api/: README.md  SKILL.md  TEST_REPORT.md  TEST_REPORT_COMPLETE.md  architecture.dot  manifest.json  test_api.py  test_report.json
mofa-fm/scripts/: setup.sh
mofa-fm/src/: main.rs
mofa-github/: SKILL.md  architecture.dot  manifest.json
mofa-infographic/: SKILL.md  architecture.dot  manifest.json
mofa-logo/: SKILL.md  architecture.dot  config.toml  manifest.json
mofa-mcdonalds/: .gitignore  SKILL.md  architecture.dot  config.toml  manifest.json
mofa-memory/: Cargo.toml  SKILL.md  architecture.dot  config.toml  manifest.json
mofa-memory/src/: db.rs  embed.rs  main.rs  similarity.rs
mofa-news/: SKILL.md  architecture.dot  manifest.json
mofa-observatory-report/: SKILL.md  manifest.json
mofa-paddleocr/: SKILL.md  architecture.dot
mofa-pinchtab/: SKILL.md  architecture.dot  config.toml
mofa-poster/: .gitignore  SKILL.md  architecture.dot
mofa-public-apis/: SKILL.md  apis.json  architecture.dot  config.toml  manifest.json
mofa-research/: SKILL.md  deep_research.dot
mofa-research-2.0/: SKILL.md  architecture.dot  config.toml
mofa-slides/: SKILL.md  architecture.dot  manifest.json
mofa-vercel-web/: SKILL.md  architecture.dot
mofa-verge-browser/: SKILL.md  architecture.dot  config.toml
mofa-video/: SKILL.md  architecture.dot  manifest.json
mofa-videolizer/: SKILL.md  architecture.dot  manifest.json
mofa-voice/: .gitignore  Cargo.toml  Makefile  SKILL.md  manifest.json
mofa-voice/scripts/: deploy.sh  install.sh  release.sh
mofa-voice/src/: main.rs
mofa-web/: build_website.dot
mofa-workflow/: SKILL.md  team_build.dot
mofa-xhs/: SKILL.md  architecture.dot  config.toml  manifest.json
mofa/lib/: engine.js  (+2 more)
scripts/: gen-registry.py
(+84 files in other folders)
