[package]
name = "mofa-agent-swarm"
version = "1.0.0"
edition = "2021"
description = "Multi-agent Swarm Orchestrator — spawn, monitor, and coordinate sub-agents using SQLite for persistence"
authors = ["ashum9"]

[[bin]]
name = "mofa-agent-swarm"
path = "src/main.rs"

[dependencies]
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
chrono      = "0.4"
rusqlite    = { version = "0.31", features = ["bundled"] }
uuid        = { version = "1", features = ["v4"] }
tokio       = { version = "1", features = ["full"] }
