[package]
name = "mofa-eval"
version = "1.0.0"
edition = "2021"
description = "Agent response evaluation skill — LLM-as-a-judge pattern to score agents"
authors = ["ashum9"]

[[bin]]
name = "mofa-eval"
path = "src/main.rs"

[dependencies]
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
chrono       = "0.4"
rusqlite     = { version = "0.31", features = ["bundled"] }
uuid         = { version = "1", features = ["v4"] }
tokio        = { version = "1", features = ["full"] }
async-openai = "0.27"
toml         = "0.8"
