[package]
name = "mofa-fm"
version = "1.0.0"
edition = "2021"
description = "Voice management and TTS skill with custom voice cloning via ominix-api"
authors = ["hagency"]

[[bin]]
name = "mofa-fm"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "json"], default-features = false }
