[package]
name = "mofa-memory"
version = "1.0.0"
edition = "2021"
description = "Persistent vector memory skill — store and retrieve knowledge across agent runs using SQLite and OpenAI embeddings"
authors = ["hagency"]

[[bin]]
name = "mofa-memory"
path = "src/main.rs"

[dependencies]
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
reqwest     = { version = "0.12", features = ["blocking", "rustls-tls", "json"], default-features = false }
chrono      = "0.4"
rusqlite    = { version = "0.31", features = ["bundled"] }
uuid        = { version = "1", features = ["v4"] }
