[package]
name = "mofa-voice"
version = "1.0.0"
edition = "2021"
description = "ASR and TTS skill binary using local Qwen3 models via ominix-api"
authors = ["hagency"]

[[bin]]
name = "mofa-voice"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "json"], default-features = false }
